--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,95 @@ body {
   margin: 0;
 }
 
+header {
+  background-color: #373b69;
+  padding: 1rem;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.search {
+  background-color: transparent;
+  color: white;
+  border: 2px solid #22254b;
+  font-size: 1.2rem;
+  font-family: inherit;
+  padding: 0.5rem 1.5rem;
+  border-radius: 3rem;
+}
+
+.search:focus {
+  outline: 0;
+}
+
+
+.movie-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .movie {
+  position: relative;
+  background-color: #373b69;
+  margin: 1rem;
   width: 300px;
+  border-radius: 0.5rem;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+
 }
 
 .movie img {
-  max-width: 100%;
+  object-fit: cover;
+  height: 400px;
+  width: 100%;
+}
+
+.movie-info {
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+  justify-content: space-between
+}
+
+.movie-info h3 {
+  margin: 0;
+}
+
+.movie-over {
+  position: absolute;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  box-shadow: 0px -3px 5px rgba(0, 0, 0, 0.1);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  color: black;
+  padding: 1rem;
+  transform: translateY(102%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie:hover .movie-over {
+  transform: translateY(0%);
+}
+
+.tag {
+  background-color: #22254b;
+  padding: 0.5rem;
+  border-radius: 5px;
+}
+
+.tag.green {
+  color: rgb(102, 255, 102)
+}
+
+.tag.orange {
+  color: orange;
+}
+
+.tag.red {
+  color: red;
 }
